--- a/package.json
+++ b/package.json
@@ -14,14 +14,23 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
