--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.5.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
@@ -26,7 +27,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
