--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.15.0",
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -23,7 +23,6 @@
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
-    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.3",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "prisma": "^4.15.0"
   }
 }
